Fixed logo on mobile fixed linking

--- a/prompt-templates/css/_breakpoints.scss
+++ b/prompt-templates/css/_breakpoints.scss
@@ -174,8 +174,7 @@
 				
 				h1{
 					padding: 30px 0
-					
-					a{ }
+				
 				}
 				
 			}			
